k8s-demo-backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-backend
spec:
  type: NodePort
  selector:
    app: k8s-demo-backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
