k8s-demo-backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-demo-backend-dev
                port:
                  number: 3000
